load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "nvcc",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=nvcc"],
)

cc_binary(
    name = "cicc",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=cicc"],
)

cc_binary(
    name = "nvlink",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=nvlink"],
)

exports_files(["link.stub", "libdevice.10.bc"])

cc_binary(
    name = "bin2c",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=bin2c"],
)

cc_binary(
    name = "fatbinary",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=fatbinary"],
)

cc_binary(
    name = "ptxas",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=ptxas"],
)

# Empty cc_library that provides CcInfo for components not available in this CUDA version.
cc_library(
    name = "dummy",
    srcs = [],
    hdrs = [],
)
