config_setting(
    name = "version_is_12_0_0",
    flag_values = {"@rules_cuda//cuda:version": "12.0.0"},
)
config_setting(
    name = "version_is_12_0_1",
    flag_values = {"@rules_cuda//cuda:version": "12.0.1"},
)
config_setting(
    name = "version_is_12_1_0",
    flag_values = {"@rules_cuda//cuda:version": "12.1.0"},
)
config_setting(
    name = "version_is_12_1_1",
    flag_values = {"@rules_cuda//cuda:version": "12.1.1"},
)
config_setting(
    name = "version_is_12_2_0",
    flag_values = {"@rules_cuda//cuda:version": "12.2.0"},
)
config_setting(
    name = "version_is_12_2_1",
    flag_values = {"@rules_cuda//cuda:version": "12.2.1"},
)
config_setting(
    name = "version_is_12_2_2",
    flag_values = {"@rules_cuda//cuda:version": "12.2.2"},
)
config_setting(
    name = "version_is_12_3_0",
    flag_values = {"@rules_cuda//cuda:version": "12.3.0"},
)
config_setting(
    name = "version_is_12_3_1",
    flag_values = {"@rules_cuda//cuda:version": "12.3.1"},
)
config_setting(
    name = "version_is_12_3_2",
    flag_values = {"@rules_cuda//cuda:version": "12.3.2"},
)
config_setting(
    name = "version_is_12_4_0",
    flag_values = {"@rules_cuda//cuda:version": "12.4.0"},
)
config_setting(
    name = "version_is_12_4_1",
    flag_values = {"@rules_cuda//cuda:version": "12.4.1"},
)
config_setting(
    name = "version_is_12_5_0",
    flag_values = {"@rules_cuda//cuda:version": "12.5.0"},
)
config_setting(
    name = "version_is_12_5_1",
    flag_values = {"@rules_cuda//cuda:version": "12.5.1"},
)
config_setting(
    name = "version_is_12_6_0",
    flag_values = {"@rules_cuda//cuda:version": "12.6.0"},
)
config_setting(
    name = "version_is_12_6_1",
    flag_values = {"@rules_cuda//cuda:version": "12.6.1"},
)
config_setting(
    name = "version_is_12_6_2",
    flag_values = {"@rules_cuda//cuda:version": "12.6.2"},
)
config_setting(
    name = "version_is_12_6_3",
    flag_values = {"@rules_cuda//cuda:version": "12.6.3"},
)
config_setting(
    name = "version_is_12_8_0",
    flag_values = {"@rules_cuda//cuda:version": "12.8.0"},
)
config_setting(
    name = "version_is_12_8_1",
    flag_values = {"@rules_cuda//cuda:version": "12.8.1"},
)
config_setting(
    name = "version_is_12_9_0",
    flag_values = {"@rules_cuda//cuda:version": "12.9.0"},
)
config_setting(
    name = "version_is_12_9_1",
    flag_values = {"@rules_cuda//cuda:version": "12.9.1"},
)
config_setting(
    name = "version_is_13_0_0",
    flag_values = {"@rules_cuda//cuda:version": "13.0.0"},
)
config_setting(
    name = "version_is_13_0_1",
    flag_values = {"@rules_cuda//cuda:version": "13.0.1"},
)
config_setting(
    name = "version_is_13_0_2",
    flag_values = {"@rules_cuda//cuda:version": "13.0.2"},
)
