load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
    name = "kernel",
    srcs = ["kernel.cu"],
    hdrs = ["kernel.h"],
    target_compatible_with = select({
        "@rules_cuda//cuda:is_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    defines = [] + select({
        "@rules_cuda//cuda:is_enabled": ["CUDA_ENABLED"],
        "//conditions:default": ["CUDA_DISABLED"],
    }),
    deps = [] + select({
        "@rules_cuda//cuda:is_enabled": [":kernel"],
        "//conditions:default": [],
    }),
)
