load("//cuda:defs.bzl", "cuda_objects", "cuda_library")

cuda_objects(
    name = "a",
    srcs = ["a.cu", "b.cuh"],
    deps = [":b"]
)

cuda_objects(
    name = "b",
    srcs = ["b.cu"],
    hdrs = ["b.cuh"],
)

cuda_library(
    name = "librdc",
    deps = [
        ":a",
        ":b",
    ],
    rdc = 1,
)

cc_binary(
    name = "main",
    deps = [
        ":librdc",
        "@local_cuda//:cuda_runtime", # FIXME:
    ],
)
