load("//cuda:defs.bzl", "cuda_library", "cuda_objects")

cuda_objects(
    name = "a",
    srcs = ["a.cu"],
    deps = [":b"],
)

cuda_objects(
    name = "b",
    srcs = ["b.cu"],
    hdrs = ["b.cuh"],
)

cuda_library(
    name = "librdc",
    rdc = 1,
    deps = [
        ":a",
        ":b",
    ],
)

cc_binary(
    name = "main",
    deps = [
        ":librdc",
    ],
)
