load(
    ":toolchain_config_lib_test.bzl",
    "eval_flag_group_failure_tests",
    "eval_flag_group_test",
    "expand_flag_test",
    "feature_configuration_env_test",
    "feature_configuration_failure_tests",
    "feature_configuration_flags_order_test",
    "feature_configuration_test",
    "feature_configuration_unsuppoted_features_test",
    "feature_constraint_test",
    "feature_flag_sets_test",
    "parse_flag_cache_test",
    "parse_flag_failure_tests",
    "parse_flag_test",
    "var_test",
)

parse_flag_failure_tests()

parse_flag_test(name = "parse_flag_test")

parse_flag_cache_test(name = "parse_flag_cache_test")

var_test(name = "var_test")

expand_flag_test(name = "expand_flag_test")

eval_flag_group_test(name = "eval_flag_group_test")

eval_flag_group_failure_tests()

feature_constraint_test(name = "feature_constraint_test")

feature_flag_sets_test(name = "feature_flag_sets_test")

feature_configuration_test(name = "feature_configuration_test")

feature_configuration_failure_tests()

feature_configuration_flags_order_test(name = "feature_configuration_flags_order_test")

feature_configuration_env_test(name = "feature_configuration_env_test")

feature_configuration_unsuppoted_features_test(name = "feature_configuration_unsuppoted_features_test")
